# cloudshift_v2

./: .gitignore  AUDIT.md  CLAUDE.md  Cargo.toml  DEPLOY.md  Dockerfile  FIXES.md  README.md  audit_2103.md  pyproject.toml
.github/workflows/: ci.yml  cloudshift.yml  deploy-cloudrun.yml  release.yml
crates/cloudshift-cli/: Cargo.toml
crates/cloudshift-cli/src/: main.rs  output.rs
crates/cloudshift-cli/src/commands/: analyse.rs  apply.rs  catalogue.rs  diff.rs  learn.rs  mod.rs  report.rs  transform.rs  validate.rs
crates/cloudshift-cli/tests/: cli_integration.rs
crates/cloudshift-core/: Cargo.toml
crates/cloudshift-core/src/: fixup.rs  lib.rs  pipeline.rs
crates/cloudshift-core/src/analyser/: go_lang.rs  hcl.rs  java.rs  mod.rs  python.rs  treesitter.rs  typescript.rs
crates/cloudshift-core/src/catalogue/: loader.rs  mod.rs
crates/cloudshift-core/src/diff/: emitter.rs  mod.rs
crates/cloudshift-core/src/domain/: entities.rs  events.rs  mod.rs  ports.rs  services.rs  value_objects.rs
crates/cloudshift-core/src/ibte/: chains.rs  discovery.rs  mod.rs  registry.rs
crates/cloudshift-core/src/ingestion/: mod.rs
crates/cloudshift-core/src/learning/: analyzer.rs  extractor.rs  generator.rs  mod.rs  store.rs
crates/cloudshift-core/src/llm_fallback/: client.rs  detector.rs  mod.rs  prompt.rs
crates/cloudshift-core/src/pattern/: compiler.rs  matcher.rs  mod.rs
crates/cloudshift-core/tests/: advanced_tests.rs  integration_test.rs  learning_test.rs
crates/cloudshift-lsp/: Cargo.toml
crates/cloudshift-lsp/src/: main.rs
crates/cloudshift-py/: Cargo.toml
crates/cloudshift-py/src/: lib.rs
crates/cloudshift-server/: Cargo.toml
crates/cloudshift-server/src/: github.rs  lib.rs  main.rs
crates/cloudshift-server/tests/: api.rs
deploy/gcp/: repoint-lb-to-v2.sh
docs/: ADDING_PYTHON_PATTERNS.md  AWS_GCP_TRANSFORM.md  PATTERN_COVERAGE_GAPS.md  PRD.md  WHICH_TOOL.md
patterns/go/: aws_athena_query.toml  aws_cloudwatch_put_metric.toml  aws_dynamodb_delete_item.toml  aws_dynamodb_get_item.toml  aws_dynamodb_put_item.toml  aws_dynamodb_query.toml  aws_dynamodb_scan.toml  aws_ec2_run_instances.toml  aws_eventbridge_put_events.toml  aws_kinesis_put_record.toml  aws_lambda_handler.toml  aws_lambda_invoke.toml  aws_rds_connection.toml  aws_s3_copy_object.toml  aws_s3_delete_object.toml  aws_s3_get_object.toml  aws_s3_list_objects.toml  aws_s3_put_object.toml  aws_secrets_manager.toml  aws_ses_send_email.toml  aws_sns_publish.toml  aws_sqs_send_message.toml  aws_step_functions_start.toml  aws_sts_assume_role.toml
patterns/hcl/: aws_acm_certificate.toml  aws_alb.toml  aws_apigateway.toml  aws_autoscaling_group.toml  aws_cloudfront.toml  aws_cloudwatch_log_group.toml  aws_cloudwatch_metric_alarm.toml  aws_codebuild.toml  aws_cognito_user_pool.toml  aws_db_subnet_group.toml  aws_dynamodb_table.toml  aws_ebs_volume.toml  aws_ecr_repository.toml  aws_ecs_service.toml  aws_efs_file_system.toml  aws_eks_cluster.toml  aws_elastic_beanstalk.toml  aws_elasticache.toml  aws_glue_catalog_database.toml  aws_iam_policy.toml  aws_iam_role.toml  aws_iam_user.toml  aws_kinesis_stream.toml  aws_kms_key.toml  aws_lambda_function.toml  aws_launch_template.toml  aws_nat_gateway.toml  aws_provider_to_google.toml  aws_rds_instance.toml  aws_route53_record.toml  aws_route53_zone.toml  aws_s3_bucket.toml  aws_sagemaker_endpoint.toml  aws_secretsmanager_secret.toml  aws_security_group.toml  aws_sns_subscription.toml  aws_sns_topic.toml  aws_sqs_queue.toml  aws_stepfunctions.toml  aws_subnet.toml  (+12 more)
patterns/java/: aws_athena_query.toml  aws_bedrock_invoke.toml  aws_cloudwatch_put_metric.toml  aws_dynamodb_batch_write.toml  aws_dynamodb_delete_item.toml  aws_dynamodb_get_item.toml  aws_dynamodb_put_item.toml  aws_dynamodb_query.toml  aws_dynamodb_scan.toml  aws_dynamodb_update_item.toml  aws_ec2_run_instances.toml  aws_ecs_run_task.toml  aws_eventbridge_put_events.toml  aws_kinesis_put_record.toml  aws_lambda_handler.toml  aws_lambda_invoke.toml  aws_rds_connection.toml  aws_s3_copy_object.toml  aws_s3_delete_object.toml  aws_s3_get_object.toml  aws_s3_list_objects.toml  aws_s3_presigned_url.toml  aws_s3_put_object.toml  aws_secrets_manager.toml  aws_ses_send_email.toml  aws_sns_publish.toml  aws_sqs_receive_message.toml  aws_sqs_send_message.toml  aws_step_functions_start.toml  aws_sts_assume_role.toml
patterns/python/: aws_athena_query.toml  aws_bedrock_invoke_model.toml  aws_boto3_client_apigateway.toml  aws_boto3_client_cognito_idp.toml  aws_boto3_client_dynamodb.toml  aws_boto3_client_ec2.toml  aws_boto3_client_ecs.toml  aws_boto3_client_eks.toml  aws_boto3_client_elasticache.toml  aws_boto3_client_events.toml  aws_boto3_client_iam.toml  aws_boto3_client_kms.toml  aws_boto3_client_logs.toml  aws_boto3_client_rds_data.toml  aws_boto3_client_route53.toml  aws_boto3_client_s3.toml  aws_boto3_client_secretsmanager.toml  aws_boto3_client_ses.toml  aws_boto3_client_sns.toml  aws_boto3_client_sqs.toml  aws_boto3_client_ssm.toml  aws_boto3_client_stepfunctions.toml  aws_boto3_resource_ec2.toml  aws_cloudwatch_get_metric.toml  aws_cloudwatch_put_log_events.toml  aws_cloudwatch_put_metric.toml  aws_cognito_admin_get_user.toml  aws_cognito_admin_set_user_password.toml  aws_cognito_initiate_auth.toml  aws_comprehend_detect_sentiment.toml  aws_dynamodb_batch_write.toml  aws_dynamodb_delete_item.toml  aws_dynamodb_get_item.toml  aws_dynamodb_put_item.toml  aws_dynamodb_query.toml  aws_dynamodb_scan.toml  aws_dynamodb_update_item.toml  aws_ec2_describe_instances.toml  aws_ec2_run_instances.toml  aws_ec2_stop_instances.toml  (+88 more)
patterns/typescript/: aws_athena_query.toml  aws_bedrock_invoke.toml  aws_cloudwatch_put_log.toml  aws_cloudwatch_put_metric.toml  aws_dynamodb_query.toml  (+40 more)
samples/: aws_comprehensive_example.py  azure_comprehensive_example.py
scripts/: README.md  _generate_smoke_cases.py  demo_api.sh  demo_local.sh  report_pattern_gaps.py  validate_all_patterns.py
static/: app.js  index.html  styles.css
ui/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
(+340 files in other folders)
