[workspace]
resolver = "2"
members = [
    "crates/cloudshift-core",
    "crates/cloudshift-cli",
    "crates/cloudshift-server",
    "crates/cloudshift-py",
    "crates/cloudshift-lsp",
]

[workspace.package]
version = "2.0.0"
edition = "2021"
authors = ["Allan Smeyatsky <allan@smeyatsky.com>"]
license = "MIT"
repository = "https://github.com/smeyatsky-labs/cloudshift"

[workspace.dependencies]
# Tree-sitter
tree-sitter = "0.24"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-java = "0.23"
tree-sitter-go = "0.23"
tree-sitter-hcl = "1.1"
tree-sitter-yaml = "0.7"
tree-sitter-dockerfile = "0.2"
tree-sitter-json = "0.24"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Async
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "2"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Misc
rayon = "1.10"
glob = "0.3"
similar = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
axum = "0.7"
