[package]
name = "cloudshift-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI interface for CloudShift"

[[bin]]
name = "cloudshift"
path = "src/main.rs"

[dependencies]
cloudshift-core = { path = "../cloudshift-core" }
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
