[package]
name = "cloudshift-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI interface for CloudShift"

[[bin]]
name = "cloudshift"
path = "src/main.rs"

[features]
default = []
llm-fallback = ["cloudshift-core/llm-fallback"]

[dependencies]
cloudshift-core = { path = "../cloudshift-core" }
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
indicatif = "0.17"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
