[package]
name = "cloudshift-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Pure transformation engine for CloudShift — no I/O"

[dependencies]
tree-sitter.workspace = true
tree-sitter-python.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-java.workspace = true
tree-sitter-go.workspace = true
tree-sitter-hcl.workspace = true
tree-sitter-yaml.workspace = true
tree-sitter-dockerfile.workspace = true
tree-sitter-json.workspace = true

serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
rayon.workspace = true
glob.workspace = true
similar.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
streaming-iterator = "0.1"
reqwest = { workspace = true, optional = true }

[features]
default = []
llm-fallback = ["reqwest"]

[dev-dependencies]
pretty_assertions = "1"
