[package]
name = "cloudshift-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "LSP server for CloudShift IDE integration"

[[bin]]
name = "cloudshift-lsp"
path = "src/main.rs"

[dependencies]
cloudshift-core = { path = "../cloudshift-core" }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
