[package]
name = "cloudshift-py"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Python bindings for CloudShift (via PyO3)"

[lib]
name = "_cloudshift_core"
crate-type = ["cdylib"]

[dependencies]
cloudshift-core = { path = "../cloudshift-core" }
pyo3 = { version = "0.23", features = ["extension-module"] }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
