[package]
name = "cloudshift-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Minimal HTTP server for Cloud Run"

[lib]
path = "src/lib.rs"

[[bin]]
name = "cloudshift-server"
path = "src/main.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
cloudshift-core = { path = "../cloudshift-core" }
anyhow = "1"
serde.workspace = true
serde_json.workspace = true
tower-http.workspace = true
iap-jwt = "0.4.0"
reqwest = { workspace = true }
tower = { version = "0.5", features = ["util"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
http-body-util = "0.1"
serde_json = { workspace = true }
serial_test = "3"
